--- a/app/styles/login/general.scss
+++ b/app/styles/login/general.scss
@@ -7,19 +7,21 @@
     margin-top: 40px;
     margin-bottom: 50px;
 
-    @media (min-height: 550px) {
+    @media (min-height: 500px) {
       margin-top: 60px;
+    }
+    @media (min-height: 600px) {
+      margin-top: 90px;
+    }
+    @media (min-height: 700px) {
+      margin-top: 120px;
     }
   }
 
-  .center-items-login {
-    margin-left: 0;
-    margin-right: 0;
-
-    @media (min-width: $grid-responsive-md-break) {
-      margin-left: 25%;
-      margin-right: 25%;
-    }
+  .constraint-width {
+    max-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   form {
@@ -38,6 +40,10 @@
 
   .title {
     top: 5px;
+  }
+
+  &.bar.bar-light.bar-footer {
+    background: none;
   }
 }
 
