--- a/app/templates/prelogin/prelogin.jade
+++ b/app/templates/prelogin/prelogin.jade
@@ -5,11 +5,11 @@ ion-view(
   ion-content.login-form
     .row
       .moviggo-logo-1
-    .list.list-inset.center-items-login
+    .list.list-inset.constraint-width
       .button.facebook-login(ng-click="preVm.loginWithFB()")
         span.fb-left-icon
         span.fb-copytext Continuar con facebook
-    .list.list-inset.center-items-login
+    .list.list-inset.constraint-width
       a.button.button-primary.button-block(ui-sref='register')
         span Registrarme usando mi email
 
