--- a/app/templates/provider/welcome.jade
+++ b/app/templates/provider/welcome.jade
@@ -8,8 +8,8 @@ ion-view(
       .moviggo-logo-2.branding-logo
     .row
       .list.list-inset.common-text
-        h1.title Conviértete en proveedor
-        p Con moviggo puedes enviar productos y convertirte en proveedor
+        h1.title Conviértete en Vendedor
+        p Con moviggo puedes vender tus productos de manera rápida y sencilla
     .row
       .list.list-inset.list--centered
         a.button.button-primary(ui-sref='app.provider.new') Empezar
