--- a/app/templates/category/index.jade
+++ b/app/templates/category/index.jade
@@ -5,7 +5,7 @@ ion-view(
     .alt-logo
   ion-content
     .grid-parent
-      a.grid-content(ng-repeat="category in categoryVm.categories"
+      a.grid-content(ng-repeat="category in categoryVm.categories()"
                     ng-class="($index+1) % 3 === 0 ? 'grid-100': 'grid-50'"
                     ui-sref="app.categories.show({id: category.id})"
                     style="background-image: url('{{category.imagen_url|defaultImage}}')")
