--- a/app/templates/directives/slick-provider/slick-provider.jade
+++ b/app/templates/directives/slick-provider/slick-provider.jade
@@ -1,7 +1,7 @@
 .slick-provider
   slick-wrapper(settings="spcVm.options.slickSettings")
     .slick-container(ng-repeat="provider in ::spcVm.providers")
-      .slick-content(ng-click="spcVm.goToProducts(provider)")
+      .slick-content(ng-click="spcVm.cardClick(provider)")
         .provider-card
           .img-container
             .img(style="background-image: url('{{provider.imagen | defaultImage:'../images/ionic.png'}}')")
