--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@
 
 @import "overrides/lists";
 @import "overrides/bar-header";
+@import "overrides/bar-footer";
 @import "overrides/input-icons";
 @import "overrides/base-colors";
 
@@ -12,7 +13,7 @@
 @import "common/rows";
 @import "common/mixins";
 @import "common/buttons";
-@import "common/bar-footer";
+@import "common/footer-stripes";
 @import "common/input_icons";
 @import "common/search-input";
 @import "common/state-tabs";
