--- a/app/templates/provider/partials/new_first_part.jade
+++ b/app/templates/provider/partials/new_first_part.jade
@@ -1,6 +1,5 @@
 .list.list-inset
-  legend {{::("provider.formLegendFirts"|translate)}}
-  span.item-input-label-lg (*) Campo requerido
+  legend {{::("provider.formLegendFirst"|translate)}}
 
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.ruc.$touched && providerVm.providerForm.ruc.$invalid}"
