--- a/app/templates/provider/welcome.jade
+++ b/app/templates/provider/welcome.jade
@@ -12,6 +12,6 @@ ion-view(
         p Con moviggo puedes vender tus productos de manera rápida y sencilla
     .row
       .list.list-inset.list--centered
-        a.button.button-white-cta(
+        a.button.button-outline.button-energized(
           ui-sref='app.provider.new'
         ) Empezar
