--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -3,6 +3,7 @@
 
   form {
     width: 100%;
+    padding-bottom: 100px; // some padding because of fixed bottom bar
   }
 
   legend {
@@ -15,6 +16,10 @@
 
   .item-error {
     border-color: $error-red;
+
+    .input-label {
+      color: $error-red;
+    }
   }
 
   label.item-input.item-stacked-label,
