--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -1,7 +1,5 @@
 .resource-form {
-  height: 100%;
-
-  form {
+  .fields-wrapper {
     width: 100%;
     padding-bottom: 100px; // some padding because of fixed bottom bar
   }
