--- a/app/templates/provider/new.jade
+++ b/app/templates/provider/new.jade
@@ -4,14 +4,14 @@ ion-view(
   ion-nav-title
     .alt-logo
 
-  ion-content.resource-form(locking="false")
-    .row
-      form(name="providerVm.providerForm" ng-submit='providerVm.submit()' novalidate)
-        div(ng-if="providerVm.step === 1" ng-include="'templates/provider/partials/new_first_part.html'")
-        div(ng-if="providerVm.step === 2" ng-include="'templates/provider/partials/new_second_part.html'")
-  .bar.bar-footer.bar-stable
-    button.button.button-outline.button-energized.button-small(
-      type='submit'
-      ng-disabled="providerVm.providerForm.$invalid"
-    )
-      | {{providerVm.step === 1 ? ("provider.nextStep"|translate) : ("provider.createProvider"|translate)}}
+  form(name="providerVm.providerForm" ng-submit='providerVm.submit()' novalidate)
+    ion-content.resource-form(locking="false")
+      .row
+        .fields-wrapper(ng-if="providerVm.step === 1" ng-include="'templates/provider/partials/new_first_part.html'")
+        .fields-wrapper(ng-if="providerVm.step === 2" ng-include="'templates/provider/partials/new_second_part.html'")
+    ion-footer-bar.bar.bar-footer.bar-stable
+      button.button.button-outline.button-energized.button-small(
+        type='submit'
+        ng-disabled="providerVm.providerForm.$invalid"
+      )
+        | {{providerVm.step === 1 ? ("provider.nextStep"|translate) : ("provider.createProvider"|translate)}}
