enhance error showing in forms (#123)
* enhance error showing in forms

* simplify provider registration form

* fixing styles

--- a/app/styles/directives/show-error.scss
+++ b/app/styles/directives/show-error.scss
@@ -1,5 +1,9 @@
-.show-errors {
-  .message-error {
-    color: $error-red;
-  }
+.errors-wrapper {
+  font-size: 13px;
+}
+
+.errors-wrapper,
+.message-error {
+  color: $error-red;
+  font-family: Montserrat-Light;
 }
