--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -24,12 +24,12 @@
   label.item-input.item-select {
     // override default
     margin-top: 15px;
-    margin-bottom: 5px;
+    margin-bottom: 30px;
     padding-bottom: 0;
     padding-left: 0;
 
     .input-label {
-      font-size: 15px;
+      font-size: 14px;
       text-transform: uppercase;
       font-family: Montserrat-Regular;
     }
@@ -43,11 +43,21 @@
         padding-left: 15px;
         padding-bottom: 0;
         padding-top: 0;
+        font-size: 16px;
+        height: 25px;
       }
     }
   }
 
   .bar.bar-footer {
     position: relative;
+  }
+}
+
+// hacking error messages so they float below inputs
+.resource-form {
+  .errors-wrapper {
+    position: absolute;
+    margin-top: -30px;
   }
 }
