--- a/app/templates/directives/show-error/show-error.jade
+++ b/app/templates/directives/show-error/show-error.jade
@@ -1,2 +1,1 @@
-div(ng-repeat='message in seVm.arrayMessages track by $index' class='show-errors')
-  span(class='message-error') {{ message }}
+span.message-error {{ seVm.joinedMessages }}
