--- a/app/templates/provider/partials/new_first_part.jade
+++ b/app/templates/provider/partials/new_first_part.jade
@@ -12,9 +12,10 @@
       ng-class='input-error',
       required
     )
-  .show-errors(ng-messages="providerVm.providerForm.ruc.$error" ng-if="providerVm.providerForm.ruc.$touched")
-    span(ng-message="required" class="message-error") Campo requerido
-  show-error(array-messages="providerVm.errors.ruc")
+  .errors-wrapper
+    span.show-errors(ng-messages="providerVm.providerForm.ruc.$error" ng-if="providerVm.providerForm.ruc.$touched")
+      span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
+    show-error(array-messages="providerVm.errors.ruc")
 
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.razonsocial.$touched && providerVm.providerForm.razonsocial.$invalid}"
@@ -26,23 +27,25 @@
       ng-model='providerVm.provider.razon_social',
       required
     )
-  .show-errors(ng-messages="providerVm.providerForm.razonsocial.$error" ng-if="providerVm.providerForm.razonsocial.$touched")
-    span(ng-message="required" class="message-error") Campo requerido
-  show-error(array-messages="providerVm.errors.razon_social")
+  .errors-wrapper
+    span.show-errors(ng-messages="providerVm.providerForm.razonsocial.$error" ng-if="providerVm.providerForm.razonsocial.$touched")
+      span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
+    show-error(array-messages="providerVm.errors.razon_social")
 
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.establecimiento.$touched && providerVm.providerForm.establecimiento.$invalid}"
   )
-   span.input-label {{::("provider.name"|translate)}}*
-   input(
-     type='text',
-     name='establecimiento',
-     ng-model='providerVm.provider.nombre_establecimiento',
-     required
-   )
-  .show-errors(ng-messages="providerVm.providerForm.establecimiento.$error" ng-if="providerVm.providerForm.establecimiento.$touched")
-    span(ng-message="required" class="message-error") Campo requerido
-  show-error(array-messages="providerVm.errors.nombre_establecimiento")
+    span.input-label {{::("provider.name"|translate)}}*
+    input(
+      type='text',
+      name='establecimiento',
+      ng-model='providerVm.provider.nombre_establecimiento',
+      required
+    )
+  .errors-wrapper
+    span.show-errors(ng-messages="providerVm.providerForm.establecimiento.$error" ng-if="providerVm.providerForm.establecimiento.$touched")
+      span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
+    show-error(array-messages="providerVm.errors.nombre_establecimiento")
 
   label.item.item-input.item-stacked-label
     span.input-label {{::("provider.economicActivity"|translate)}}
@@ -62,69 +65,7 @@
       ng-model='providerVm.provider.representante_legal',
       required
     )
-  .show-errors(ng-messages="providerVm.providerForm.representante.$error" ng-if="providerVm.providerForm.representante.$touched")
-    span(ng-message="required" class="message-error") Campo requerido
-  show-error(array-messages="providerVm.errors.representante_legal")
-
-  label.item.item-input.item-stacked-label(
-    ng-class="{'item-error': providerVm.providerForm.telefono.$touched && providerVm.providerForm.telefono.$invalid}"
-  )
-    span.input-label {{::("provider.phone"|translate)}}*
-    input(
-      type='tel',
-      name='telefono',
-      ng-model='providerVm.provider.telefono',
-      required
-    )
-  .show-errors(ng-messages="providerVm.providerForm.telefono.$error" ng-if="providerVm.providerForm.telefono.$touched")
-    span(ng-message="required" class="message-error") Campo requerido
-  show-error(array-messages="providerVm.errors.telefono")
-
-  label.item.item-input.item-stacked-label(
-    ng-class="{'item-error': providerVm.providerForm.email.$touched && providerVm.newProviderForm.email.$invalid}"
-  )
-    span.input-label {{::("provider.email"|translate)}}*
-    input(
-      type='email',
-      placeholder='user@mydomain.com',
-      name='email',
-      ng-model='providerVm.provider.email',
-      required
-    )
-  .show-errors(ng-messages="providerVm.providerForm.email.$error" ng-if="providerVm.providerForm.email.$touched")
-    span(ng-message="required" class="message-error") Campo requerido
-    span(ng-message="email" class="message-error") Email incorrecto
-  show-error(array-messages="providerVm.errors.email")
-
-  label.item.item-input.item-stacked-label
-    span.input-label {{::("provider.webSite"|translate)}}
-    input(
-      type='text',
-      name='website',
-      ng-model='providerVm.provider.website'
-    )
-
-  label.item.item-input.item-stacked-label(
-    ng-class="{'item-error': providerVm.touchedPayments && providerVm.providerForm.methodsPayment.$invalid}"
-  )
-    span.input-label {{::("provider.methodPayment"|translate)}}*
-    ion-list
-      ion-checkbox(
-        ng-repeat="method in providerVm.methodsPayment",
-        ng-model="method.checked"
-        name="methodsPayment"
-        ng-checked="method.checked"
-        ng-change="providerVm.checked(method)"
-      ) {{ ::method.label }}
-  .show-errors.ng-active(ng-if="providerVm.touchedPayments && providerVm.providerForm.methodsPayment.$invalid")
-    span(class='message-error' class="message-error") Campo requerido
-  show-error(array-messages="providerVm.errors.formas_de_pago")
-
-  label.item.item-input.item-stacked-label
-    span.input-label {{::("provider.logo"|translate)}}
-    input(
-      type='file'
-      ngf-select
-      ng-model="itemsVm.item.imagen"
-      accept="image/*"
-    )
+  .errors-wrapper
+    span.show-errors(ng-messages="providerVm.providerForm.representante.$error" ng-if="providerVm.providerForm.representante.$touched")
+      span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
+    show-error(array-messages="providerVm.errors.representante_legal")
