--- a/app/templates/provider/partials/new_second_part.jade
+++ b/app/templates/provider/partials/new_second_part.jade
@@ -1,89 +1,68 @@
 .list.list-inset
   legend {{::("provider.formLegendSecond"|translate)}}
-
-  label.item.item-input.item-stacked-label
-    span.input-label {{::("provider.bank.name"|translate)}}
-    input(
-      type='text',
-      name='banco_nombre',
-      ng-model='providerVm.provider.banco_nombre'
-    )
-
-  label.item.item-input.item-stacked-label
-    span.input-label {{::("provider.bank.type"|translate)}}
-    ion-list
-      ion-checkbox(
-        ng-repeat="type in providerVm.accountType",
-        ng-model="type.checked"
-        name="bankType"
-        ng-checked="type.checked"
-        ng-change="providerVm.checkedBank(type)"
-      ) {{ ::type.label }}
-
-  label.item.item-input.item-stacked-label
-    span.input-label {{::("provider.bank.account"|translate)}}
-    input(
-      type='text',
-      name='banco_numero_cuenta',
-      ng-model='providerVm.provider.banco_numero_cuenta'
-    )
-
-  legend {{::("provider.formLegendThird"|translate)}}
-
+  
   label.item.item-input.item-stacked-label(
-    ng-class="{'item-error': providerVm.providerForm.direccion_matriz.$touched && providerVm.providerForm.direccion_matriz.$invalid}"
-  )
-    span.input-label {{::("provider.address"|translate)}}*
-    input(
-      type='text',
-      name='direccion_matriz',
-      ng-model='providerVm.matrizProvider.direccion',
-      required
-    )
-  .show-errors(ng-messages="providerVm.providerForm.direccion_matriz.$error" ng-if="providerVm.providerForm.direccion_matriz.$touched")
-    span(ng-message="required" class="message-error") Campo requerido
-  show-error(array-messages="providerVm.errors.provider_offices.direccion")
-
-  label.item.item-input.item-stacked-label
-    span.input-label {{::("provider.openTime"|translate)}}*
-  .dateTime(ion-datetime-picker="" time="" ng-model="providerVm.matrizProvider.hora_de_apertura" required)
-    span(ng-if="!providerVm.matrizProvider.hora_de_apertura") Click para seleccionar
-    | {{providerVm.matrizProvider.hora_de_apertura| date: "H:mm"}}
-  show-error(array-messages="providerVm.errors.provider_offices.hora_de_apertura")
-
-  label.item.item-input.item-stacked-label
-    span.input-label {{::("provider.closeTime"|translate)}}*
-  .dateTime(ion-datetime-picker="" time="" ng-model="providerVm.matrizProvider.hora_de_cierre" required)
-    span(ng-if="!providerVm.matrizProvider.hora_de_cierre") Click para seleccionar
-    | {{providerVm.matrizProvider.hora_de_cierre| date: "H:mm"}}
-  show-error(array-messages="providerVm.errors.provider_offices.hora_de_cierre")
-
-  label.item.item-input.item-stacked-label
-    span.input-label {{::("provider.initialLaborDay"|translate)}}
-  item.item-input.item-select.select-position-adjust
-    select(
-     ng-model="providerVm.matrizProvider.inicio_de_labores"
-     ng-options="item as item.label for item in providerVm.laborDays"
-    )
-
-  label.item.item-input.item-stacked-label
-    span.input-label {{::("provider.finalLaborDay"|translate)}}
-  item.item-input.item-select.select-position-adjust
-    select(
-     ng-model="providerVm.matrizProvider.final_de_labores"
-     ng-options="item as item.label for item in providerVm.laborDays"
-    )
-
-  label.item.item-input.item-stacked-label(
-    ng-class="{'item-error': providerVm.providerForm.telefono_matriz.$touched && providerVm.providerForm.telefono_matriz.$invalid}"
+    ng-class="{'item-error': providerVm.providerForm.telefono.$touched && providerVm.providerForm.telefono.$invalid}"
   )
     span.input-label {{::("provider.phone"|translate)}}*
     input(
       type='tel',
-      name='telefono_matriz',
-      ng-model='providerVm.matrizProvider.telefono',
+      name='telefono',
+      ng-model='providerVm.provider.telefono',
       required
     )
-  .show-errors(ng-messages="providerVm.providerForm.telefono_matriz.$error" ng-if="providerVm.providerForm.telefono_matriz.$touched")
-    span(ng-message="required" class="message-error") Campo requerido
-  show-error(array-messages="providerVm.errors.provider_offices.telefono")
+  .errors-wrapper
+    span.show-errors(ng-messages="providerVm.providerForm.telefono.$error" ng-if="providerVm.providerForm.telefono.$touched")
+      span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
+    show-error(array-messages="providerVm.errors.telefono")
+
+  label.item.item-input.item-stacked-label(
+    ng-class="{'item-error': providerVm.providerForm.email.$touched && providerVm.providerForm.email.$invalid}"
+  )
+    span.input-label {{::("provider.email"|translate)}}*
+    input(
+      type='email',
+      placeholder='user@mydomain.com',
+      name='email',
+      ng-model='providerVm.provider.email',
+      required
+    )
+  .errors-wrapper
+    span.show-errors(ng-messages="providerVm.providerForm.email.$error" ng-if="providerVm.providerForm.email.$touched")
+      span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
+      span.message-error(ng-message="email") {{::("form.wrongEmail"|translate)}}
+    show-error(array-messages="providerVm.errors.email")
+
+  label.item.item-input.item-stacked-label
+    span.input-label {{::("provider.webSite"|translate)}}
+    input(
+      type='text',
+      name='website',
+      ng-model='providerVm.provider.website'
+    )
+
+  label.item.item-input.item-stacked-label(
+    ng-class="{'item-error': providerVm.touchedPayments && providerVm.providerForm.methodsPayment.$invalid}"
+  )
+    span.input-label {{::("provider.methodPayment"|translate)}}*
+    ion-list
+      ion-checkbox(
+        ng-repeat="method in providerVm.methodsPayment",
+        ng-model="method.checked"
+        name="methodsPayment"
+        ng-checked="method.checked"
+        ng-change="providerVm.checked(method)"
+      ) {{ ::method.label }}
+  .errors-wrapper
+    span.show-errors.ng-active(ng-if="providerVm.touchedPayments && providerVm.providerForm.methodsPayment.$invalid")
+      span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
+    show-error(array-messages="providerVm.errors.formas_de_pago")
+
+  label.item.item-input.item-stacked-label
+    span.input-label {{::("provider.logo"|translate)}}
+    input(
+      type='file'
+      ngf-select
+      ng-model="itemsVm.item.imagen"
+      accept="image/*"
+    )
