--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,6 +39,7 @@
 @import "categories/show";
 @import "item/item";
 @import "client/client";
+@import "wishlist/wishlist";
 @import "error/error";
 @import "menu/menu";
 @import "products/show";
