--- a/app/templates/profile/info/edit.jade
+++ b/app/templates/profile/info/edit.jade
@@ -66,7 +66,7 @@ ion-modal-view.client-page
           )
         show-error(array-messages="piVm.messages.ciudad")
 
-      .bar.bar-footer.footer-client-container
+      .bar.bar-footer
         action-button(
           type="submit"
           text="{{::('globals.save'|translate)}}"
