--- a/app/styles/profile/profile.scss
+++ b/app/styles/profile/profile.scss
@@ -14,6 +14,13 @@
         font-size: 1rem;
       }
     }
+
+    .img-profile {
+      height: 12rem;
+      width: 12rem;
+      border-radius: 50%;
+    }
+
   }
 
   .profile-body {
@@ -39,5 +46,6 @@
     .label-profile-customer {
       border-right: 0.1rem solid #FDC30D;
     }
+
   }
 }
