Inicio para listar direcciones de facturación - Comprador (#96)
* Inicio para listar direcciones de facturación - Comprador

* Creación y edición de direcciones de facturación

* Corección código fuente

* Validación campos

* Solución código duplicado

* Validación campos y código duplicado

* Refactorización de código, Error en consumir Servicio

* Refactorización de codigo

* Eliminación de código no utilizado

--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -33,6 +33,8 @@ ion-side-menus(enable-menu-with-back-views='false')
           li {{::("menu.client.payments"|translate)}}
         ion-item.gray-item(menu-close='' ui-sref='app.wishlist.index')
           li {{::("menu.client.wishlist"|translate)}}
+        ion-item.gray-item(menu-close='' ui-sref='app.billing.addresses')
+          li {{::("menu.client.billingAddresses"|translate)}}
         ion-item
           | {{::("menu.invite"|translate)}}
         ion-item(ng-controller='LoginController as loginVm', ng-click='loginVm.logout()')
