--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -47,3 +47,4 @@
 @import "profile/profile-addresses";
 @import "profile/profile-addresses-update";
 @import "couriers/orders";
+@import "billing-addresses/billing-addresses"
